fixes #171 migrate to Java 11 in jdk11 branch